Updated Login page and Sign in page.

--- a/DentistAppointmentSystem/Site.Master
+++ b/DentistAppointmentSystem/Site.Master
@@ -70,7 +70,7 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - Mert Güney 20211011329 / Bilgisayar Programcılığı II.Sınıf Bahar Dönemi Final Proje Ödevi</p>
             </footer>
         </div>
     </form>
