--- a/DentistAppointmentSystem/Site.Master
+++ b/DentistAppointmentSystem/Site.Master
@@ -11,71 +11,52 @@
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <webopt:bundlereference runat="server" path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 </head>
 <body>
-    <form runat="server">
-        <asp:ScriptManager runat="server">
-            <Scripts>
-                <%--To learn more about bundling scripts in ScriptManager see https://go.microsoft.com/fwlink/?LinkID=301884 --%>
-                <%--Framework Scripts--%>
-                <asp:ScriptReference Name="MsAjaxBundle" />
-                <asp:ScriptReference Name="jquery" />
-                <asp:ScriptReference Name="WebForms.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebForms.js" />
-                <asp:ScriptReference Name="WebUIValidation.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebUIValidation.js" />
-                <asp:ScriptReference Name="MenuStandards.js" Assembly="System.Web" Path="~/Scripts/WebForms/MenuStandards.js" />
-                <asp:ScriptReference Name="GridView.js" Assembly="System.Web" Path="~/Scripts/WebForms/GridView.js" />
-                <asp:ScriptReference Name="DetailsView.js" Assembly="System.Web" Path="~/Scripts/WebForms/DetailsView.js" />
-                <asp:ScriptReference Name="TreeView.js" Assembly="System.Web" Path="~/Scripts/WebForms/TreeView.js" />
-                <asp:ScriptReference Name="WebParts.js" Assembly="System.Web" Path="~/Scripts/WebForms/WebParts.js" />
-                <asp:ScriptReference Name="Focus.js" Assembly="System.Web" Path="~/Scripts/WebForms/Focus.js" />
-                <asp:ScriptReference Name="WebFormsBundle" />
-                <%--Site Scripts--%>
-            </Scripts>
-        </asp:ScriptManager>
-
-        <header class="p-1 text-bg-dark">
-            <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
-                <div class="container-md">
-                    <img src="Images/LogoDentist.png" alt="Logo" width="80" height="80" class="d-inline-block align-text-top" />
-                    <a class="navbar-brand" href="#">Discim.com</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                        <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Discim.com</h5>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body navbar-collapse d-flex flex-row-reverse">
-                            <a href="/Pages/LogIn.aspx" class="btn btn-primary" role="button">Giriş Yap</a>
-                            <a href="/Pages/SignIn.aspx" class="btn btn-outline-danger me-3" role="button">Kayıt Ol</a>
-                            <ul class="navbar-nav">
-                                <li class="nav-item"><a class="nav-link" runat="server" href="Default.aspx">Ana Sayfa</a></li>
-                                <li class="nav-item"><a class="nav-link" runat="server" href="#">Tedaviler</a></li>
-                                <li class="nav-item"><a class="nav-link" runat="server" href="#">Doktorlar</a></li>
-                                <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/About.aspx">Hakkımızda</a></li>
-                                <li class="nav-item"><a class="nav-link me-2" runat="server" href="~/Pages/Contact.aspx">İletişim</a></li>
-                            </ul>
-                        </div>
+    <header class="p-1 text-bg-dark">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+            <div class="container-md">
+                <a class="navbar-brand" href="Default.aspx">Discim.com</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Discim.com</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body navbar-collapse d-flex flex-row-reverse">
+                        <a href="/Pages/LogIn.aspx" class="btn btn-primary" role="button">Giriş Yap</a>
+                        <a href="/Pages/SignIn.aspx" class="btn btn-outline-danger me-3" role="button">Kayıt Ol</a>
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" runat="server" href="Default.aspx">Ana Sayfa</a></li>
+                            <li class="nav-item"><a class="nav-link" runat="server" href="#">Tedaviler</a></li>
+                            <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/Doctors.aspx">Doktorlar</a></li>
+                            <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/About.aspx">Hakkımızda</a></li>
+                            <li class="nav-item"><a class="nav-link me-2" runat="server" href="~/Pages/Contact.aspx">İletişim</a></li>
+                        </ul>
                     </div>
                 </div>
-            </nav>
-        </header>
-        <div class="container body-content">
-            <asp:ContentPlaceHolder ID="MainContent" runat="server">
-            </asp:ContentPlaceHolder>
-            <hr />
-            <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - Mert Güney 20211011329 / Bilgisayar Programcılığı II.Sınıf Bahar Dönemi Final Proje Ödevi</p>
-            </footer>
-        </div>
-    </form>
+            </div>
+        </nav>
+    </header>
+    <div class="container body-content">
+        <asp:ContentPlaceHolder ID="MainContent" runat="server">
+        </asp:ContentPlaceHolder>
+        <hr />
+        <footer>
+            <p>M3rtix <%: DateTime.Now.Year %> - Mert Güney 20211011329 / Bilgisayar Programcılığı II.Sınıf Bahar Dönemi Final Proje Ödevi</p>
+        </footer>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/Scripts/bootstrap.js") %>
     </asp:PlaceHolder>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </html>
