--- a/DentistAppointmentSystem/AdminPages/DoctorsAdminPanel.Master
+++ b/DentistAppointmentSystem/AdminPages/DoctorsAdminPanel.Master
@@ -41,7 +41,7 @@
 
             <ul class="list-unstyled components">
                 <li class="active">
-                    <a href="#homeSubmenu">
+                    <a href="DPatients.aspx">
                         <i class="fas fa-id-badge"></i>
                         Hastalar
                     </a>
@@ -63,15 +63,6 @@
                     </a>
                 </li>
             </ul>
-
-            <ul class="list-unstyled CTAs">
-                <li>
-                    <a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a>
-                </li>
-                <li>
-                    <a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a>
-                </li>
-            </ul>
         </nav>
 
         <!-- Contentin olduğu bölüm  -->
@@ -81,7 +72,6 @@
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                         <i class="fas fa-align-left"></i>
-                        <span>Toggle Sidebar</span>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
